--- a/multi_dc/Vagrantfile
+++ b/multi_dc/Vagrantfile
@@ -4,8 +4,7 @@
 VAGRANTFILE_API_VERSION = "2"
 
 DC_NUM = 2
-IP_BASE = "192.168.33."
-BIP_BASE = "10.1."
+IP_BASE = "192.168.33"
 
 SERVER_NUM = 3
 CLIENT_NUM = 3
@@ -15,8 +14,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   (1..DC_NUM).each do |i|
     hostname = "dc-#{i}"
-    ip = "#{IP_BASE}#{i+10}"
-    bip = "#{BIP_BASE}#{i+10}"
+    ip = "#{IP_BASE}.#{i+10}"
+    bip = "172.17.#{i+10}.1\\/24"
 
     config.vm.define vm_name = hostname do |dc|
       dc.vm.hostname = hostname
@@ -28,7 +27,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         sh.inline = <<-EOT
           docker ps -q | xargs --no-run-if-empty docker kill | xargs --no-run-if-empty docker rm
 
-          sed -e \'s/%BIP%/#{bip}.1\\/24/g\' -i /tmp/docker.service
+          sed -e \'s/%BIP%/#{bip}/g\' -i /tmp/docker.service
           mv /tmp/docker.service /etc/systemd/system/
 
           systemctl daemon-reload
