--- a/multi_dc/docker.service
+++ b/multi_dc/docker.service
@@ -5,7 +5,7 @@ Documentation=http://docs.docker.io
 [Service]
 ExecStartPre=-/usr/bin/ip link set dev docker0 down
 ExecStartPre=-/usr/sbin/brctl delbr docker0
-ExecStart=/usr/bin/docker -d -s=btrfs -H fd:// --bip=%BIP%
+ExecStart=/usr/bin/docker -d --bip=%BIP%
 Restart=on-failure
 RestartSec=5
 
