--- a/multi_dc/node-cloud-config.yml
+++ b/multi_dc/node-cloud-config.yml
@@ -34,6 +34,7 @@ coreos:
         EnvironmentFile=/run/flannel/subnet.env
         ExecStartPre=-/usr/bin/ip link set dev docker0 down
         ExecStartPre=-/usr/sbin/brctl delbr docker0
+        ExecStartPre=/usr/sbin/iptables -t nat -F POSTROUTING
         ExecStartPre=/bin/mount --make-rprivate /
         ExecStart=/usr/bin/docker -d --bip=${FLANNEL_SUBNET} --mtu=${FLANNEL_MTU} -s=btrfs -H fd://
 
