--- a/docker/consul/config/agent.conf
+++ b/docker/consul/config/agent.conf
@@ -1,7 +1,7 @@
 {
   "data_dir": "/tmp/consul",
   "ports": {
-    "dns":"53"
+    "dns": 53
   },
   "recursor": "8.8.8.8",
   "ui_dir": "/consul/ui"
